-Add Output of the postman tests -Add database bacpac file from SQL Server Management Studio

--- a/Assign03.csproj
+++ b/Assign03.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Database of sql server\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
 
